# MLX-Studio-Wirks

./: .gitignore  Launch Empire.command  MacEmpire.command  SETUP.md  WinEmpire.bat  package-lock.json  package.json  pyproject.toml  server.py
backend/: alembic.ini  comfy_api.py  database.py  main.py  postprocess.py  requirements.txt  scheduler.py  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 2aa62647e5cc_baseline.py  5566ad86f45c_add_generation_jobs_generation_runs_.py  a3c8f4e91d01_add_phase_2_4_tables.py
backend/api/: agents.py  analytics.py  campaigns.py  chat.py  content.py  generation.py  jobs.py  links.py  memory.py  metrics.py  personas.py  presets.py  review.py  schedules.py  shadow.py  system.py  vault.py  video.py
backend/services/: agents.py  jobs.py  llm.py  orchestrator.py  shadowwirk.py
backend/workers/: queue.py  scoring.py
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: AgentPanel.tsx  AnalyticsPanel.tsx  AnimatedPreview.tsx  ChatPanel.tsx  ContentSetPanel.tsx  GenerationPanel.tsx  LinkManager.tsx  MetricsPanel.tsx  MissionControlPanel.tsx  PersonaForm.tsx  PersonaMemoryPanel.tsx  ReviewInboxPanel.tsx  SchedulePanel.tsx  ShadowVidPanel.tsx  VaultPanel.tsx
frontend/app/lib/: api.ts
frontend/scripts/: run-mode.js
persona/: __init__.py  moxy.py
scripts/: playwright_service.mjs
static/: app.js  index.html  style.css
static/extensions/chromium-page-assist/: background.js  content.js  install.html  manifest.json  popup.html  (+2 more)
