[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-moxy-wirks"
version = "0.1.0"
description = "MLX-Moxy-Wirks — sovereign local LLM studio on Apple Silicon, inhabited by Moxy."
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.135.3,<0.136",
  "httpx>=0.28.1,<0.29",
  "huggingface_hub>=1.10.1,<2",
  "mlx-lm>=0.31.2,<0.32",
  "pypdf>=6.10.0,<7",
  "safetensors>=0.7.0,<0.8",
  "uvicorn[standard]>=0.44.0,<0.45",
]

[project.scripts]
mlx-moxy-wirks = "server:main"

[tool.setuptools]
py-modules = ["server"]
packages = ["persona"]
